--- a/Template.html
+++ b/Template.html
@@ -84,8 +84,7 @@
             <p align=center style="text-align:center">All rights reserved.</p>
         </div>
     </div>
-    <p align=center style="text-align:center">Scoring Engine by Joseph Xu, Gabriel Fok, Christos Bakis, Clement Chan, Jimmy Li. Web Design by CyberPatriot, modified by Clement Chan.
-        </br>Credits to CyberPatriot.
+    <p align=center style="text-align:center">Scoring Engine by Joseph Xu. Web Design by Clement Chan.
     </p>
 </body>
 </html>
