Fixed improper credits
The "Troy Cyber Competition is the property of Troy High School" line did not have any legal ramifications.  Additionally, the original credits accidentally included the creators of the Windows scoring engine, which is completely distinct from this engine, made for Linux.

--- a/Template.html
+++ b/Template.html
@@ -80,7 +80,7 @@
             </p>
         </div>
     </div>
-    <p align=center style="text-align:center">Scoring Engine by Joseph Xu. Web Design by Clement Chan.
+    <p align=center style="text-align:center">Scoring Engine by Joseph Xu, Christos Bakis. Web Design by Clement Chan.
     </p>
 </body>
 </html>
